--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-tgcrypto
-asyncio
+tgcrypto==1.2.5
+asyncio==3.4.3
 ffmpeg-python
-py-tgcalls==0.8.1
-pyrogram==1.4.12
-youtube-search-python==1.4.9
-yt_dlp
-youtube_dl
-youtube-search
-python-dotenv
+py-tgcalls==0.9.7
+pyrogram==2.0.97
+https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+python-dotenv==0.21.1
 dnspython
 gitpython
-aiofiles
+aiofiles==22.1.0
 telethon
-aiohttp
+aiohttp==3.8.3
 aiogram<3.0
 requests
-pillow
+pillow==9.4.0
+numpy==1.24.1
 heroku3
 motor
 psutil
 future
 wget
 pyyaml==5.3.1
-speedtest-cli
+speedtest-cli==2.1.3
 telegraph
 python-arq
 bs4
