--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "RaiChu Music Bot",
+    "name": "☘️ਰੂਹਾਨੀਅਤ☘️ & ISHU Music",
     "description": "Telegram bot for Streaming  Music trought the Telegram Group Video Chat, powered by pytgcalls and pyrogram",
     "logo": "https://telegra.ph/file/b581039c9a18d939d19dd.jpg",
     "keywords": [
@@ -8,7 +8,7 @@
         "pyrogram"
     ],
     "website": "https://t.me/BotDuniyaXd",
-    "repository": "https://github.com/SANGRAM-MUSIC/herokumusic",
+    "repository": "https://github.com/Lovedeep-ViRk/herokumusic",
     "success_url": "https://t.me/Tg_friendss",
     "env": {
         "API_ID": {
